# authorization-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_jwt_keys.py  pyproject.toml  ruff.toml
app/: asgi.py
app/adapters/inbound/http/controllers/: __init__.py  auth_controller.py  health_controller.py  session_controller.py  user_controller.py
app/adapters/inbound/http/urls/: auth_urls.py  health_urls.py  session_urls.py  user_urls.py
app/adapters/outbound/repositories/: __init__.py  session_repository.py  user_repository.py
app/application/services/: __init__.py  auth_service.py  health_service.py  session_service.py  user_service.py
app/config/: app_settings.py  base_settings.py  constants.py
app/infrastructure/db/migrations/versions/: 2025-04-07_init_b33b7f1955fc.py
app/infrastructure/di/providers/: __init__.py  auth_dependencies.py  cookie_dependencies.py  health_dependencies.py  session_dependencies.py  user_dependencies.py
app/lib/: logger.py
app/lib/errors/: __init__.py  exceptions.py  handlers.py
app/lib/security/: __init__.py  jwt.py  password.py  role.py
app/server/: middlewares.py  openapi.py  query_dependencies.py  routers.py
app/server/cron/: __init__.py  cron.py
app/server/cron/job/: session_cleanup_job.py
app/server/life_cycle/: __init__.py  lifespan.py  shutdown.py  startup.py
scripts/: entry
